# evmax-catalog-api

./: .env.example  .gitignore  API_EXAMPLES.md  Dockerfile  EXAMPLES.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  SYSTEM_CHECK_REPORT.md  SYSTEM_STATUS.txt  alembic.ini  api_server.py  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt  sample_data.py
alembic/: env.py
alembic/versions/: 56820dcb6bd7_add_contextual_chain_tracking.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/data/: cost_codes.py
app/models/: __init__.py  bid.py  contextual_chain.py  cost_code.py
app/routers/: __init__.py  benchmarks.py  bids.py  bom.py  cost_codes.py  products.py  roi.py
app/routes/: __init__.py  bids.py  contextual_chains.py  cost_codes.py
app/schemas/: __init__.py  bid.py  contextual_chain.py  cost_code.py
app/services/: __init__.py  bid_service.py  business_logic.py  contextual_service.py  cost_code_service.py
examples/: contextual_chain_usage.py
tests/: conftest.py  test_api.py  test_contextual_service.py  test_data.py  test_services.py
